syntax = "proto3";

package product;

option go_package="learning-grpc/product/proto";


message Pagination {
  uint64 total = 1;
  uint64 per_page = 2;
  uint32 current_page = 3;
  uint32 last_page = 4;

}

message Products {
  Pagination pagination = 1;
  repeated Product data = 2; //digunakan untuk mengulang product data
}

message Product {
  uint64 id = 1;
  string name = 2;
  double price = 3;
  uint32 stock = 4;
  Category category = 5;
}


message Category{
  uint32 id =1;
  string name = 2;
}

message Empty {}; // digunakan ketika parameter null

service ProductService {
  rpc GetProducts(Page) returns(Products);
  rpc GetProduct(Id) returns(Product); 
  rpc CreateProduct(Product) returns(Id);
  rpc UpdateProduct(Product) returns(Status);
  rpc DeleteProduct(Id) returns(Status);

}


message Id {
  uint64 id = 1;
}

message Status {
  uint32 status = 1;
}


message Page {
  optional int64 page = 1;
}